--- a/task-3/package.json
+++ b/task-3/package.json
@@ -30,6 +30,7 @@
     "material-ui": "^0.20.0",
     "node-sass": "^4.3.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-router-dom": "^4.2.2",
     "react-sortable-tree": "^1.5.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
