--- a/task-3/client/package.json
+++ b/task-3/client/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-moment": "^0.7.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   }
